MDL-64935 theme: prevent activitynavigation link overflowing container

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -1200,3 +1200,14 @@ span.editinstructions {
     height: 32px;
     font-size: 32px;
 }
+
+.activity-navigation {
+    .row {
+        align-items: center;
+    }
+    #prev-activity-link,
+    #next-activity-link {
+        white-space: pre-wrap;
+    }
+}
+
